src/test/ui/feature-gates/feature-gate-no-debug.rs
#![allow(deprecated)]

#[no_debug] //~ ERROR the `#[no_debug]` attribute was
fn main() {}
